# CG_2425

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  clean.ps1  clean.sh  imgui.ini  run.ps1  run.sh  setup.ps1  setup.sh
.build/: args.ps1  args.sh
Models/: 10  bezier_10.3d  box.3d  box_2_3.3d  comet.3d  cone.3d  cone_1_2_4_3.3d  cylinder.3d  cylinder_1_2_8_2.3d  flatRing_4_2_16.3d  flatring.3d  icosphere.3d  plane.3d  plane_2_3.3d  planet.3d  ring.3d  sphere.3d  sphere_1_8_8.3d  sun.3d  torus.3d
Scenes/phase1/: test_1_1.xml  test_1_6.xml  test_1_7.xml  test_1_8.xml
Scenes/phase2/: SistemaSolar.xml  SistemaSolarFast.xml  allPrimitives.xml  test.xml  torus.xml
Scenes/phase4/: test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
docs/ImHex/patterns/: 3d.hexpat  3d_v2.hexpat
include/common/: common.h  common.hpp  debug.hpp  parser.hpp
include/common/geometry/: BaseGeometry.hpp  GeometryCatalog.hpp  bezier.hpp  box.hpp  cone.hpp  cylinder.hpp  flatRing.hpp  icosphere.hpp  obj.hpp  plane.hpp  point.hpp  sphere.hpp  torus.hpp
include/common/util/: maputil.hpp  maputil.tpp  vectors.hpp  vectors.tpp  xmlutil.hpp
include/engine/: glContext.hpp  input.hpp
include/engine/engineUI/: engineUI.hpp
include/engine/geometry/: GeometryCatalog.hpp
include/engine/imGUI/: imgui_impl_glut.h
include/engine/scene/: Camera.hpp  CatmullRomCurve.hpp  Group.hpp  Light.hpp  Model.hpp  Object.hpp  Scene.hpp  SceneState.hpp  Window.hpp
include/generator/: cone.hpp  point.hpp
src/common/: CMakeLists.txt  common.cpp  parser.cpp
src/common/geometry/: GeometryCatalog.cpp  bezier.cpp  box.cpp  cone.cpp  cylinder.cpp  flatRing.cpp  icosphere.cpp  obj.cpp  plane.cpp  point.cpp  sphere.cpp  torus.cpp
src/common/util/: xmlutil.cpp
src/engine/: CMakeLists.txt  input.cpp  main.cpp  parser.cpp
src/engine/engineUI/: engineUI.cpp
src/engine/geometry/: GeometryCatalog.cpp  bezier.cpp  box.cpp  cone.cpp  cylinder.cpp  flatRing.cpp  icosphere.cpp  obj.cpp  plane.cpp  sphere.cpp  torus.cpp
src/engine/imGUI/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glut.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/engine/scene/: Camera.cpp  CatmullRomCurve.cpp  Group.cpp  Light.cpp  Model.cpp  Object.cpp  Scene.cpp  Window.cpp
src/generator/: CMakeLists.txt  main.cpp
src/generator/geometry/: BezierGenerator.cpp  boxGenerator.cpp  coneGenerator.cpp  cylinderGenerator.cpp  flatRingGenerator.cpp  icosphereGenerator.cpp  planeGenerator.cpp  sphereGenerator.cpp  torusGenerator.cpp
src/generator/src/: cone.cpp  point.cpp
src/lib/: CMakeLists.txt  tinyxml2.cpp
